Repo List displayed through RepoFactory

--- a/git_lab/templates/index.html
+++ b/git_lab/templates/index.html
@@ -15,6 +15,8 @@
     <script src="{% static "js/app.js" %}"></script>
 
     <!------- Factories ------->
+    <script src="{% static "js/factories/repoFactory.js" %}"></script>
+
 
     <!------- Controllers ------->
     <script src="{% static "js/controllers/homeController.js" %}"></script>
