--- a/git_lab/static/js/views/home.html
+++ b/git_lab/static/js/views/home.html
@@ -2,7 +2,7 @@
 <!--Allow filtering of your repo through text search and private/public repos.-->
 <div class="row">
     <div class="col-md-6">
-        <div ng-repeat="repo in repos | filter: searchText">
+        <div ng-repeat="repo in repos | filter: searchText | filter: privateRepos | filter: publicRepos">
             <!--Allow users to click into the repo to view specific information about the repo.-->
             <div>
                 <a href="#/repos/{{ repo.owner.login }}/{{ repo.name }}">{{ repo.name }}</a>
@@ -33,9 +33,9 @@
         <span>Search Repositories</span>
         <input type="text" placeholder="Search Text" ng-model="searchText">
         <br>
-        <!--<span>Only Public Repos</span><input type="checkbox" ng-model="">
+        <span>Only Public Repos</span><input type="checkbox" ng-model="isPublic">
         <br>
-        <span>Only Private Repos</span><input type="checkbox" ng-model="">-->
+        <span>Only Private Repos</span><input type="checkbox" ng-model="isPrivate">
     </div>
 </div>
 
