--- a/git_lab/templates/index.html
+++ b/git_lab/templates/index.html
@@ -7,6 +7,7 @@
     <!------- Angular ------->
     <script src="{% static "js/vendors/angular/angular.min.js" %}"></script>
     <script src="{% static "js/vendors/angular/angular-route.min.js" %}"></script>
+    <script src="{% static "js/vendors/angular-ui/ui-bootstrap-tpls-0.11.2.min.js" %}"></script>
 
     <!------- Bootstrap ------->
 {#    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">#}
